added random button

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
    <meta charset="UTF-8">
    <title>playing with Canvas</title>
    <link rel="stylesheet" href="style.css">
-   <style type="text/css">
-   </style>
+   <style type="text/css"></style>
 </head>
 <body>
+   <button value="Random it" class="btn_rand">Random it</button>
    <canvas id="mainCanvas"></canvas>
-   <script src="life_canvas.js"></script>
+   <script src="life.js"></script>
 </body>
 </html>
